doc: update javadoc folder