@@ -6,7 +6,6 @@ import it.polimi.ingsw.utils.CharacterJSONParser;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 
 public class CharactersDeck {
@@ -23,6 +22,6 @@ public class CharactersDeck {
 
     public List<CharacterCard> extractCharacterInUse(){
         Collections.shuffle(characterCards);
-        return characterCards.stream().limit(Constants.NumOfCharacterInUse).collect(Collectors.toList());
+        return characterCards.stream().limit(Constants.NumOfCharacterInUse).toList();
     }
 }
